2003-09-01  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added the evolution-groupwise module.

2003-09-01  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added the gnome-backup module.

2003-08-31  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fix acme branch also for gnome-2-2.

2003-08-31  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added the libgircclient module.

2003-08-31  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: acme has been branched.

2003-08-30  Abel Cheung  <deaddog@deaddog.org>

	* translation-status.xml: Fix gedit-plugins pot name.

2003-08-30  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added the openoffice module.

2003-08-28  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: epiphany has been branched.

2003-08-27  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: yelp has been branched.

2003-08-26  Carlos Perelló Marín <carlos@gnome.org>

	* translation-status.xml: Updated libgda/libgnomedb branch information

2003-08-24  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gnome-office.

2003-08-23  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: Added scaffold (former anjuta2)

2003-08-23  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: Fix glimmer branch.

2003-08-20  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: Remove metatheme, its functionality has
	already been superseded by newer control center.

2003-08-17  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: Fix gal,gtkhtml,drgeo pot file name.

2003-08-13  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gal has been branched.

2003-08-13  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: ggv has been branched.

2003-08-11  Christian Rose  <menthos@menthos.com>
