@@ -766,6 +766,17 @@
       </component>
     </version>
   </module>
+  <module name="gnome-blog">
+    <version release="gnome-2.4">
+      <component name="gnome-blog" dir="gnome-blog" group="extras">
+        <podir dir="po"/>
+        <potname name="gnome-blog.pot"/>
+        <branch name="HEAD"/>
+        <regenerate/>
+        <download/>
+      </component>
+    </version>
+  </module>
   <module name="gnome-build">
     <version release="gnome-2.4">
       <component name="gnome-build" dir="gnome-build" group="developer-app">
